Add exmaples of averaging numbers using a list.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@72420 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -6519,9 +6519,6 @@ As you might expect, you can assign list values to variables:
 
 \index{assignment}
 
-% From Jeff: write sum for a nested list?
-
-
 \section{Lists are mutable}
 
 \index{list!element}
@@ -6786,34 +6783,6 @@ can update multiple elements:
 \afterverb
 %
 
-% You can add elements to a list by squeezing them into an empty
-% slice:
-
-% \beforeverb
-% \begin{verbatim}
-% >>> t = ['a', 'd', 'e', 'f']
-% >>> t[1:1] = ['b', 'c']
-% >>> print t
-% ['a', 'b', 'c', 'd', 'e', 'f']
-% \end{verbatim}
-% \afterverb
-%
-% And you can remove elements from a list by assigning the empty list to
-% them:
-
-% \beforeverb
-% \begin{verbatim}
-% >>> t = ['a', 'b', 'c', 'd', 'e', 'f']
-% >>> t[1:3] = []
-% >>> print t
-% ['a', 'd', 'e', 'f']
-% \end{verbatim}
-% \afterverb
-%
-% But both of those operations can be expressed more clearly
-% with list methods.
-
-
 \section{List methods}
 
 \index{list!method}
@@ -6953,6 +6922,80 @@ a slice index:
 As usual, the slice selects all the elements up to, but not
 including, the second index.
 
+\section{Lists and functions}
+
+There are a number of built-in functions that can be used on lists
+that allow you to quickly look through a list without
+writing your own loops:
+
+\beforeverb
+\begin{verbatim}
+>>> nums = [3, 41, 12, 9, 74, 15]
+>>> print len(nums)
+6
+>>> print max(nums)
+74
+>>> print min(nums)
+3
+>>> print sum(nums)
+154
+>>> print sum(nums)/len(nums)
+25
+\end{verbatim}
+\afterverb
+%
+The {\tt sum()} function only works when the list elements are numbers.
+The other functions ({\tt max()}, {\tt len()}, etc.) work with lists of
+strings and other types that can be comparable.
+
+We could rewrite an earlier program that computed the average of 
+a list of numbers entered by the user using a list.
+
+First, the program to compute an average without a list:
+
+\beforeverb
+\begin{verbatim}
+total = 0
+count = 0
+while ( True ) :
+    inp = raw_input('Enter a number: ')
+    if inp == 'done' : break
+    value = float(inp)
+    total = total + value
+    count = count + 1
+
+average = total / count
+print 'Average:', average
+\end{verbatim}
+\afterverb
+%
+In this program, we have {\tt count} and {\tt sum} variables to 
+keep the number and running total of the user's numbers as 
+we repeatedly prompt the user for a number.
+
+We could simply remember each number as the user entered it 
+and use built-in functions to compute the sum and count at
+the end.
+
+\beforeverb
+\begin{verbatim}
+numlist = list()
+while ( True ) :
+    inp = raw_input('Enter a number: ')
+    if inp == 'done' : break
+    value = float(inp)
+    numlist.append(value)
+
+average = sum(numlist) / len(numlist)
+print 'Average:', average
+\end{verbatim}
+\afterverb
+%
+We make an empty list before the loop starts, and then each time we have 
+a number, we append it to the list.  At the end of
+the program, we simply compute the sum of the numbers in the 
+list and divide it by the count of the numbers in the
+list to come up with the average.
 
 \section{Lists and strings}
 
@@ -7749,9 +7792,33 @@ cwen@iupui.edu
 There were 27 lines in the file with From as the first word
 \end{verbatim}
 \afterverb
-
+%
 \end{ex}
 
+\begin{ex}
+Rewrite the program that prompts the user for a list of 
+numbers and prints out the maximum and minimum of the
+numbers at the end when the user enters ``done''.  Write
+the program to store the numbers the user enters in a list
+and use the {\tt max()} and {\tt min()} fuctions to 
+compute the maximum and minimum numbers after the 
+loop completes.
+
+\beforeverb
+\begin{verbatim}
+Enter a number: 6
+Enter a number: 2
+Enter a number: 9
+Enter a number: 3
+Enter a number: 5
+Enter a number: done
+Maximum: 9.0
+Minimum: 2.0
+\end{verbatim}
+\afterverb
+%
+
+\end{ex}
 
 \chapter{Dictionaries}
 \index{dictionary}
