Typos in Chapter 1.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@76176 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -696,7 +696,7 @@ def   ﬁnally   in   print
 \afterverb
 %
 That is it, and unlike a dog, Python is already completely trained.
-When you say ``break'', Python will beak every time you say it without
+When you say ``try'', Python will try every time you say it without
 fail.
 
 We will learn these reserved words and how they are used in good time,
@@ -743,7 +743,7 @@ Type "help", "copyright", "credits" or "license" for more information.
 The {\tt >>>} prompt is the Python interpreter's way of asking you, ``What
 do you want me to do next?''.  Python is ready to have a conversation with
 you.  All you have to know is how to speak the Python language and you 
-can have a concersation.
+can have a conversation.
 
 Lets say for example that you did not know even the simplest Python language
 words or sentances. You might want to use the standard line that astronauts 
@@ -815,7 +815,7 @@ programmers using Python to talk to the users of your program.
 
 Before we leave our first conversation with the Python 
 interpreter, you should probably know the proper way
-to say ``good-bye'' when interating with the inhabitants
+to say ``good-bye'' when interacting with the inhabitants
 of Planet Python:
 
 \beforeverb
@@ -876,10 +876,10 @@ programmers to write in high level languages like Python or JavaScript
 and these translators convert the programs to machine language for actual
 execution by the CPU.
 
-Since machine language is tied to the comuter hardware, machine language
+Since machine language is tied to the computer hardware, machine language
 is not {\bf portable} across different types of hardware.  Programs written in 
 high-level languages can be moved between different computers by using a 
-different interpreter on the new machins or re-compiling the code to create
+different interpreter on the new machine or re-compiling the code to create
 a machine language version of the program for the new machine.
 
 These programming language translators fall into two general categories:
@@ -1014,7 +1014,7 @@ form a file, it knows to stop when it reaches the end of the file.
 \section{What is a program?}
 
 The definition of a {\bf program} at its most basic is a sequence
-of Python statements that have been crafted to do something useful.
+of Python statements that have been crafted to do something.
 Even our simple {\bf hello.py} script is a program.  It is a one-line
 program and is not partcularly useful, but in the strictest definition,
 it is a Python program.
@@ -1043,11 +1043,11 @@ and the tent fell down on the clown and the car
 %
 Then imagine that you are doing this task looking at millions of lines of 
 text.  Frankly it would be quickler for you to learn Python and write a 
-Python program to count the words than it would be to actually 
-count the words.
+Python program to count the words than it would be to manually 
+scan the words.
 
 The even better news is that I already came up with a simple program to 
-find the most common word in a body of text of any size.  I wrote it,
+find the most common word in a text file.  I wrote it,
 tested it, and now I am giving it to you to use so you can save some time.
 
 \beforeverb
@@ -1085,7 +1085,7 @@ This is a good example of how Python and the Python language are acting as an in
 between you (the end-user) and me (the programmer).  Python is a way for us to exchange useful
 instruction sequences (i.e. programs) in a common language that can be used by anyone who 
 installs Python on their computer.  So neither of us are talking {\em to Python},
-instead we are communicating with each other {\em through Python}.
+instead we are communicating with each other {\em through} Python.
 
 \section{The building blocks of programs}
 
@@ -1102,7 +1102,7 @@ from machine language up to the high-level languages.
 
 \item[input:] Get data from the the ``outside world''.  This might be 
 reading data from a file, or even some kind of sensor like 
-a microphone or GPS.  In our initial programs, our {\bf input} will come from the user
+a microphone or GPS.  In our initial programs, our input will come from the user
 typing data on the keyboard.
 
 \item[output:] Display the results of the program on a screen
@@ -1209,10 +1209,10 @@ in your backback, walk to the library, and then put the top back on the bottle.'
 is syntactically perfect and in the right order, but there is simply a mistake in 
 the program.  The program is perfectly correct but it does not do what
 you {\em intended} for it to do. A simple example would
-be if you were giving a person directions to a restaunt an said, ``... when you reach
+be if you were giving a person directions to a restaunt and said, ``... when you reach
 the intersection with the gas station, turn left and go one mile and the restaraunt
 is a red building on your left.''.  Your friend is very late and calls you to tell you that
-they are on a farm and walkig around behind a barn, with no sign of a restaraunt.  
+they are on a farm and walking around behind a barn, with no sign of a restaraunt.  
 The you say ``did you turn left or right gas station?'' and 
 they say, ``I followed your directions perfectly, I have 
 them written down, it says turn left and go one mile at the gas station.''.  Then you say,
@@ -1221,8 +1221,8 @@ sadly contained a small but undetected semantic error.''.
 
 \end{description}
 
-Again in both cases, Python is trying its hardest to do exactly what 
-you have asked.
+Again in all three types of errors, Python is merely trying its hardest to 
+do exactly what you have asked.
 
 \section{The learning journey}
 
@@ -1244,7 +1244,7 @@ if you are taking a course, it will progress in a linear fashion, don't hesitate
 to be very non-linear in how you approach the material.  Look forwards and backwards
 and read with a light touch.  By skimming more advanced material without 
 fully understanding the details, you can get a beter understanding of they ``why?'' 
-of programming.  by reviewing previous materials and even re-doing earlier 
+of programming.  By reviewing previous material and even re-doing earlier 
 exercises, you will realize that you actually learned a lot of material even 
 if the material you are currently staring at seems a bit impenetrable.
 
@@ -1329,7 +1329,7 @@ user to type some input to the program.
 \item[secondary memory:] Stores programs and data and retains its 
 information even when the power is turned off.  Generally slower 
 than main memory.  Examples of secondary memory include disk 
-drives and flash member in USB sticks.
+drives and flash memory in USB sticks.
 \index{secondary memory}
 
 \item[semantics:]  The meaning of a program.
