Tiny word tweaks.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@76180 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -801,7 +801,7 @@ brought the spears back out.
 
 At this point, you should also realize that while Python 
 is amazingly complex and powerful and very picky about 
-the syntax about how you communicate with it, Python is {\em 
+the syntax you use to communicate with it, Python is {\em 
 not} intelligent.  You are having a conversation with 
 yourself but using proper syntax.
 
@@ -1019,7 +1019,7 @@ Even our simple {\bf hello.py} script is a program.  It is a one-line
 program and is not partcularly useful, but in the strictest definition,
 it is a Python program.
 
-It might be easiest to thing about a program by thinking about a problem 
+It might be easiest to understand what a program is by thinking about a problem 
 that a program might be built to solve and the looking at a program
 that would solve that problem.
 
