Wow, a *lot* of misspellings - I am mastering Excalibur.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@76254 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -3,7 +3,7 @@
 
 %\documentclass[10pt,b5paper]{book}
 \documentclass[10pt]{book}
-\usepackage[width=5.0in,height=7.50in,hmarginratio=3:2,vmarginratio=1:1]{geometry}
+\usepackage[width=5.25in,height=7.50in,hmarginratio=3:2,vmarginratio=1:1]{geometry}
 
 \usepackage{pslatex}
 \usepackage{url}
@@ -656,7 +656,7 @@ We start with the vocabulary and structure of Python programs.  Be patient
 as the simple examples remind you of when you started reading for the first
 time. 
 
-\section{Words and sentances}
+\section{Words and sentences}
 \index{programming language}
 \index{language!programming}
 
@@ -672,13 +672,13 @@ reserved words as a name for a variable.
 In a sense, when we train a dog, we would use special words like,
 ``sit'', ``stay'', and ``fetch''.  Also when you talk to a dog and
 don't use any of the reserved words, they just look at you with a 
-quzzical look on their faces until you say a reserved word.  
+quizzical look on their faces until you say a reserved word.  
 For example, if you say, 
 ``I wish more people would walk to improve their overall health.'', 
 what most dogs likely hear is,
 ``blah blah blah {\bf walk} blah blah blah blah.''
 That is because ``walk'' is a reserved word in dog language.  Many
-might suggest that the langage between humans and cats has no
+might suggest that the language between humans and cats has no
 reserved words\footnote{\url{http://xkcd.com/231/}}.
 
 The reserved words in the language where humans talk to 
@@ -710,13 +710,13 @@ print 'Hello world!'
 \end{verbatim}
 \afterverb
 
-And we have even written our first syntatically correct Python sentance.
-Our sentance starts with the reserved word {\bf print} followed
+And we have even written our first syntactically correct Python sentence.
+Our sentence starts with the reserved word {\bf print} followed
 by a string of text of our choosing enclosed in single quotes.
 
 \section{Conversing with Python}
 
-Now that we have a word and a simple sentance that we know in Python,
+Now that we have a word and a simple sentence that we know in Python,
 we need to know how to start a conversation with Python to test 
 our new language skills.
 
@@ -746,7 +746,7 @@ you.  All you have to know is how to speak the Python language and you
 can have a conversation.
 
 Lets say for example that you did not know even the simplest Python language
-words or sentances. You might want to use the standard line that astronauts 
+words or sentences. You might want to use the standard line that astronauts 
 use when they land on a far away planet and try to speak with the inhabitants
 of the planet:
 
@@ -838,8 +838,8 @@ SyntaxError: invalid syntax
 You will notice that the error is different for the first two
 incorrect attempts.   The second error is different because 
 {\bf if} is a reserved word and Python saw the reserved word
-and through we were trying to say something but got the syntax
-of the sentance wrong.
+and thought we were trying to say something but got the syntax
+of the sentence wrong.
 
 The proper way to say ``good-bye'' to Python is to enter 
 {\bf quit()} at the interactive chevron {\tt >>>} prompt.
@@ -854,7 +854,7 @@ straightforward for humans to read and write and for computers
 to read and process.  Other high-level languages include: Java, C++,
 PHP, Ruby, Basic, Perl, JavaScript, and many more.  The actual hardware
 inside the Central Processing Unit (CPU) does not understand any
-of these high level leanguages.
+of these high level languages.
 
 The CPU understands a language we call {\bf machine-language}.  Machine
 language is very simple and frankly very tiresome to write because it 
@@ -888,11 +888,11 @@ These programming language translators fall into two general categories:
 An {\bf interpreter} reads the source code of the program as written by the
 programmer, parses the source code, and interprets the instructions on-the-fly.
 Python is an interpreter and when we are running Python interactively, 
-we can type a line of Python (a sentance) and Python processes it immediately
+we can type a line of Python (a sentence) and Python processes it immediately
 and is ready for us to type another line of Python.   
 
 Some of the lines of Python tell Python that you want it to remember some 
-value for later.   We need to pick a name for that value to be rembered and
+value for later.   We need to pick a name for that value to be remembered and
 we can use that symbolic name to retrieve the value later.  We use the 
 term {\bf variable} to refer to the labels we use to refer to this stored data.
 
@@ -916,18 +916,18 @@ the value currently in {\bf y}.
 
 Even through we are typing these commands into Python one line at a time, Python
 is treating them as an ordered sequence of statements with later statements able
-to rretrieve data created in earlier statements.   We are writing our first 
-simple paragraph with four sentances in a logical and meaningful order.
+to retrieve data created in earlier statements.   We are writing our first 
+simple paragraph with four sentences in a logical and meaningful order.
 
 It is the nature of an {\bf interpreter} to be able to have an interactive conversation
-as shown above.  A compiler needs to be handed the entire program in a file, and then 
+as shown above.  A {\bf compiler} needs to be handed the entire program in a file, and then 
 it runs a process to translate the high level source code into machine language
 and then the compiler puts the resulting machine language into a file for later
 execution.
 
 If you have a Windows system, often these executable machine language programs have a
 suffix of ``.exe'' or ``.dll'' which stand for ``executable'' and ``dynamically loadable
-library'' respectively.  In Linux and Maxintosh there is no suffix that uniquely marks
+library'' respectively.  In Linux and Macintosh there is no suffix that uniquely marks
 a file as executable.
 
 If you were to open an executable file in a text editor, it would look 
@@ -1016,7 +1016,7 @@ form a file, it knows to stop when it reaches the end of the file.
 The definition of a {\bf program} at its most basic is a sequence
 of Python statements that have been crafted to do something.
 Even our simple {\bf hello.py} script is a program.  It is a one-line
-program and is not partcularly useful, but in the strictest definition,
+program and is not particularly useful, but in the strictest definition,
 it is a Python program.
 
 It might be easiest to understand what a program is by thinking about a problem 
@@ -1042,7 +1042,7 @@ and the tent fell down on the clown and the car
 \afterverb
 %
 Then imagine that you are doing this task looking at millions of lines of 
-text.  Frankly it would be quickler for you to learn Python and write a 
+text.  Frankly it would be quicker for you to learn Python and write a 
 Python program to count the words than it would be to manually 
 scan the words.
 
@@ -1089,7 +1089,7 @@ instead we are communicating with each other {\em through} Python.
 
 \section{The building blocks of programs}
 
-In the next few chapters, we will learn more about the vocabulary, sentance structure,
+In the next few chapters, we will learn more about the vocabulary, sentence structure,
 paragraph structure, and story structure of Python.  We will learn about the powerful
 capabilities of Python and how to compose those capabilities together to create useful
 programs.
@@ -1203,20 +1203,20 @@ a syntax error may just be a starting point for your investigation.
 \item[Logic errors:] A logic error is when your program has good syntax but there is a mistake 
 in the order of the statements or perhaps a mistake in how the statements relate to one another.
 A good example of a logic error might be, ``take a drink from your water bottle, put it 
-in your backback, walk to the library, and then put the top back on the bottle.''
+in your backpack, walk to the library, and then put the top back on the bottle.''
 
 \item[Semantic errors:] A semantic error is when your description of the steps to take 
 is syntactically perfect and in the right order, but there is simply a mistake in 
 the program.  The program is perfectly correct but it does not do what
 you {\em intended} for it to do. A simple example would
-be if you were giving a person directions to a restaunt and said, ``... when you reach
-the intersection with the gas station, turn left and go one mile and the restaraunt
+be if you were giving a person directions to a restaurant and said, ``... when you reach
+the intersection with the gas station, turn left and go one mile and the restaurant
 is a red building on your left.''.  Your friend is very late and calls you to tell you that
-they are on a farm and walking around behind a barn, with no sign of a restaraunt.  
+they are on a farm and walking around behind a barn, with no sign of a restaurant.  
 The you say ``did you turn left or right gas station?'' and 
 they say, ``I followed your directions perfectly, I have 
 them written down, it says turn left and go one mile at the gas station.''.  Then you say,
-``I am very sorry, because while my instuctions were syntactically correct, they 
+``I am very sorry, because while my instructions were syntactically correct, they 
 sadly contained a small but undetected semantic error.''. 
 
 \end{description}
@@ -1230,7 +1230,7 @@ As you progress through the rest of the book, don't be afraid if the concepts
 don't seem to fit together well the first time.  When you were learning to speak, 
 it was not a problem  for your first few years you just made cute gurgling noises.
 And it was OK if it took six months for you to move from simple vocabulary to 
-simple sentances and took 5-6 more years to move from sentances to paragraphs, and a
+simple sentences and took 5-6 more years to move from sentences to paragraphs, and a
 few more years to be able to write an interesting complete short story on your own.
 
 We want you to learn Python much more rapidly, so we teach it all at the same time
@@ -1243,7 +1243,7 @@ fragments that make up the big picture.  While the book is written linearly and
 if you are taking a course, it will progress in a linear fashion, don't hesitate
 to be very non-linear in how you approach the material.  Look forwards and backwards
 and read with a light touch.  By skimming more advanced material without 
-fully understanding the details, you can get a beter understanding of they ``why?'' 
+fully understanding the details, you can get a better understanding of they ``why?'' 
 of programming.  By reviewing previous material and even re-doing earlier 
 exercises, you will realize that you actually learned a lot of material even 
 if the material you are currently staring at seems a bit impenetrable.
@@ -1545,7 +1545,7 @@ It is good to think of the plus and asterisk characters as ``pushy''.  For examp
 }
 
 It is possible to tell an asterisk or plus-sign not to be so ``greedy'' by adding 
-another character.   See the detailed dcumentation for information on turning off the 
+another character.   See the detailed documentation for information on turning off the 
 greedy behavior.
 \index{greedy}
 
@@ -2518,7 +2518,7 @@ disk.  This will work if the size of the file is less than the size
 of the memory of your computer.
 
 However if this is a large audio or video file, this program may crash
-or ar least run extremly slowly when your computer runs out of memory.
+or at least run extremely slowly when your computer runs out of memory.
 In order to avoid running out of memory, we retrieve the data in blocks
 (or buffers) and then write each block to your disk before retrieving
 the next block.  This way the program can read any sized file without
@@ -2620,7 +2620,7 @@ the URL so it can read any web page.
 You can use {\tt split('/')} to break the URL into its component parts
 so you can extract the host name for the socket {\tt connect} call.
 Add error checking using {\tt try} and {\tt except} to handle the condition where the 
-user enters an improperly formatted or non-existant URL.  
+user enters an improperly formatted or non-existent URL.  
 \end{ex}
 
 \begin{ex}
@@ -3753,7 +3753,7 @@ the retrieval of the friends of this account.  This keeps us from re-retrieving
 the same data over and over and keeps us progressing forward through the network
 of Twitter friends.
 
-If we run the friend program and press enter twice to retreive the next 
+If we run the friend program and press enter twice to retrieve the next 
 unvisited friend's friends,
 then run the dumping program, it will give us the following output:
 
@@ -3904,7 +3904,7 @@ records.   We are creating these rules as a convenience in our programs as we
 will see in a moment.  The rules both keep us from making mistakes and make
 it simpler to write some of our code.
 
-In essense, in creating this {\tt Follows} table, we are modelling a 
+In essence, in creating this {\tt Follows} table, we are modelling a 
 "relationship" where one person "follows" someone else
 and representing it with a pair of numbers indicating that (a) the people are
 connected and (b) the direction of the relationship.
@@ -4380,7 +4380,7 @@ and restart and retain the data from one run to the next.
 You can build a simple database with a single table to suit many application 
 needs, but most problems will require several tables and links/relationships
 between rows in different tables.   When you start making links between 
-tables, it is important to do some thoughful design and follow the 
+tables, it is important to do some thoughtful design and follow the 
 rules of database normalization to make the best use of the database's
 capabilities.  Since the primary motivation for using a database
 is that you have a large amount of data to deal with, it is important
@@ -4401,7 +4401,7 @@ browser ``locks'' the database file and keeping any other program
 from accessing the file.  In particular, your Python program
 will not be able to access the file if it is locked.
 
-So a solution is to make sure to either close the dababase browser 
+So a solution is to make sure to either close the database browser 
 or use the {\bf File} menu to close the database in the browser
 before you attempt to access the database from Python to avoid
 the problem of your Python code failing because the database is
@@ -4471,7 +4471,7 @@ of attributes.  More typically called ``row''.
 \begin{ex}
 Retrieve the following file \url{http://www.py4inf.com/code/wikidata.db} 
 and use the SQLite browser to figure out how many tables
-are in the datbase and list the fields for each of the tables including the
+are in the database and list the fields for each of the tables including the
 type of the field.  One of the fields is a type that is not described in 
 this chapter.  Use the SQLite online documentation to describe the
 purpose of that type of data?
@@ -4965,7 +4965,7 @@ text = handle.read()
 We can simplify this program a bit by taking the file name
 from the command line when we start Python.  Up to now,
 we simply run our Python programs and respond to the 
-prmompts as as follows:
+prompts as as follows:
 
 \beforeverb
 \begin{verbatim}
@@ -5267,7 +5267,7 @@ approach to keep things simple.
 First, you need to install a programmer editor.  You
 do not want to use Notepad or Microsoft Word to edit
 Python programs.  Programs must be in "flat-text" files
-and so you need an eitor that is good at
+and so you need an editor that is good at
 editing text files.
 
 Our recommended editor for Windows is NotePad++ which
@@ -5285,7 +5285,7 @@ folder on your computer like {\tt C:{\textbackslash}Python25}.
 
 To create a Python program, run NotePad++ from the Start Menu
 and save the file with a suffix of ``.py''.  For this
-exercse, put a folder on your Desktop named 
+exercise, put a folder on your Desktop named 
 {\tt py4inf}.  It is best to keep your folder names short
 and not to have any spaces in your folder or file name.
 
@@ -5381,9 +5381,9 @@ Python programs, and this is just one
 approach we have found to be very simple.
 
 First, you need to install a programmer editor.  You
-do notwant to use TextEdit or Microsoft Word to edit
+do not want to use TextEdit or Microsoft Word to edit
 Python programs.  Programs must be in "flat-text" files
-and so you need an eitor that is good at
+and so you need an editor that is good at
 editing text files.
 
 Our recommended editor for Macintosh is TextWrangler which
