--- a/cfbook.tex
+++ b/cfbook.tex
@@ -4600,7 +4600,7 @@ in the given directory:
 \section{Example: Cleaning up a photo directory}
 
 Some time ago, I built a bit of Flickr-like software that 
-received photos from my cellphone and stored those photos
+received photos from my cell phone and stored those photos
 on my server.  I wrote this before Flickr existed and kept 
 using it after Flickr existed because
 I wanted to keep original copies of my images forever.
@@ -5411,7 +5411,7 @@ into {\tt Desktop{\textbackslash}py4inf{\textbackslash}prog1.py}.
 
 The run the {\bf Terminal} program.  The easiest way is to 
 press the Spotlight icon (the magnifying glass) in the upper
-right of your screen and enter ``terminial'' and launch the
+right of your screen and enter ``terminal'' and launch the
 application that comes up.
 
 You start in your ``home directory''.  You can see the current 
