--- a/cfbook.tex
+++ b/cfbook.tex
@@ -2069,6 +2069,20 @@ Write a program to look for lines of the form
 And extract the number from each of the lines using a regular expression
 and the {\tt findall()} method.  Compute the average of the numbers and 
 print out the average.
+
+\beforeverb
+\begin{verbatim}
+Enter file:mbox.txt 
+38549.7949721
+
+Enter file:mbox-short.txt
+39756.9259259
+\end{verbatim}
+\afterverb
+%
+
+67-194-95-44:code csev$ 
+
 \end{ex}
 
 \chapter{Networked programs}
